# trimap-matting

./: .gitignore  README.md
mandate/resources/abstract/: abstract.tex  compile.sh  lpi.sty
mandate/resources/diaries/: compile.sh  diaries.tex  listings-rust.sty
mandate/resources/documentation/: compile.sh  documentation.tex  lpi.sty  references.bib
matting-cli/: Cargo.toml
matting-cli/src/: args.rs  helpers.rs  main.rs
matting-gui/: Cargo.toml
matting-gui/src/: main.rs
matting-lib/: Cargo.toml
matting-lib/src/: error.rs  lib.rs
matting-web/: Cargo.toml
matting-web/src/: args.rs  handler.rs  main.rs
matting-web/src/handler/routes/: fill.rs  macros.rs  matting.rs  mod.rs  replace.rs  transparent.rs
matting-web/static/: imageHandler.js  index.html  style.css  trimapPaint.js
matting-web/static/js/: dropdown.js  logicHandler.js  trimapPaint.js
matting-web/static/style/: style.css
