[package]
name = "matting-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { versione = "4.0.29", features = ["derive"] }

# TODO move to libs
opencv = "0.74.2"
image = "0.24.5"
csscolorparser = "0.6.2"