[package]
name = "matting-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
csscolorparser = "0.6.2"
chrono = "0.4.23"
log = "0.4.17"
env_logger = "0.10.0"

matting-lib = { path = "../matting-lib" }