[package]
name = "matting-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
futures = "0.3.25"
tokio = { version = "1", features = ["full"] }

matting-lib = { path = "../matting-lib" }